# crux-passkey

./: .gitattributes  .gitignore  Cargo.toml  Crux.toml  README.md
crux-passkey-server/: .gitignore  cloud_create_db.sh  cloud_delete_db.sh  cloud_deploy.sh  deploy.sh  migration.sql  run.sh  spin.toml  test.sh
crux-passkey-server/webauthn/: Cargo.toml
crux-passkey-server/webauthn/src/: auth.rs  db.rs  lib.rs  session.rs
crux-passkey-server/well-known/: Cargo.toml
crux-passkey-server/well-known/public/: apple-app-site-association
crux-passkey-server/well-known/src/: lib.rs
iOS/: .gitignore  project.yml
iOS/CruxPasskey/: ContentView.swift  CruxPasskey.entitlements  CruxPasskeyApp.swift  Data+Base64URL.swift  Info.plist  config.swift  core.swift  http.swift  passkey.swift
iOS/CruxPasskey.xcodeproj/: project.pbxproj
iOS/CruxPasskey.xcodeproj/project.xcworkspace/xcuserdata/stuartharris.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/CruxPasskey.xcodeproj/xcshareddata/xcschemes/: CruxPasskey.xcscheme
iOS/CruxPasskey.xcodeproj/xcuserdata/stuartharris.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: update_deps.sh
shared/: Cargo.toml  uniffi.toml
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/xcshareddata/xcschemes/: uniffi-bindgen-bin.xcscheme
shared/shared.xcodeproj/xcuserdata/stuartharris.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  lib.rs
shared/src/app/: mod.rs
shared/src/app/auth/: mod.rs
shared/src/app/auth/fixtures/: credential.json  register_credential.json
shared/src/capabilities/: mod.rs  passkey.rs
shared/src/fixtures/: creation_options.json  request_options.json
shared_types/: build.rs
web-leptos/: Cargo.toml  Trunk.toml  index.html
web-leptos/src/: core.rs  http.rs  main.rs  passkey.rs
