[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core = "0.6"
crux_macros = "0.3"
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.20"
uniffi = "0.25.0"
wasm-bindgen = "0.2.88"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.25.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { version = "1.34.0", features = ["yaml"] }
