[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core = "0.6.4"
crux_http = "0.4.2"
crux_macros = "0.3.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"
log = "0.4.20"
uniffi = "0.25.1"
wasm-bindgen = "0.2.88"
webauthn-rs-proto = { version = "0.4.9", features = ["wasm"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.25.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.25.1", features = ["build"] }

[dev-dependencies]
assert_let_bind = "0.1.1"
assert_matches = "1.5.0"
insta = { version = "1.34.0", features = ["yaml"] }
