[package]
name = "web-leptos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = { version = "0.4.0", features = ["http"] }
leptos = { version = "0.5.4", features = ["csr"] }
log = "0.4.20"
serde_json = "1.0.108"
shared = { path = "../shared" }
webauthn-rs-proto = { version = "0.4.9", features = ["wasm"] }
web-sys = { version = "0.3.66", features = [
  "CredentialCreationOptions",
  "CredentialRequestOptions",
  "CredentialsContainer",
  "Navigator",
  "PublicKeyCredential",
  "PublicKeyCredentialCreationOptions",
] }
wasm-bindgen-futures = { version = "0.4" }
