[package]
name = "webauthn"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
description = "webauthn endpoints"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
cookie = { version = "0.18.0", features = ["percent-encode", "secure"] }
http = "0.2"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.105"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" }
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4"] }
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation"
] }

[workspace]
