[package]
name = "webauthn"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
description = "webauthn endpoints"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
cookie = { version = "0.18.0", features = ["percent-encode", "secure"] }
http = "0.2"
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" }
url = "2.4.1"
uuid = { version = "1.5.0", features = ["v4"] }
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation"
] }

[workspace]
