[package]
name = "webauthn"
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
description = "webauthn endpoints"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
cookie = { version = "0.18.0", features = ["percent-encode", "secure"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin" }
uuid = { version = "1.6.1", features = ["v4"] }
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation"
] }

[workspace]
